# diagnostic_medical

./: .env.example  .gitignore  README.md  main.py  package-lock.json  pyproject.toml
backend/: langgraph.json  requirements.txt
backend/app/: __init__.py  api.py  graph.py  llm.py  state.py
backend/app/nodes/: __init__.py  diagnostic_agent.py  physician_review.py  report_agent.py  supervisor.py
backend/app/tools/: care_tools.py  mcp_client.py  medical_sources.py  patient_tools.py  urgency_scorer.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.jsx  styles.css
frontend/src/components/: CompareView.jsx  Dashboard.jsx  ExportPDF.jsx  HistoryPanel.jsx  ImageUpload.jsx  LanguageSelector.jsx  UrgencyBadge.jsx  i18n.js
mcp_server/: server.py
mcp_server/data/: red_flags.md
