[project]
name = "diagnostic-medical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "streamlit>=1.57.0",
    "uvicorn[standard]>=0.46.0",
]
